<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".principal">

    <HorizontalScrollView
        android:layout_width="414dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <GridView
                android:id="@+id/gridDatos"
                android:layout_width="800dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:numColumns="7"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbarAlwaysDrawVerticalTrack="false" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="28dp"
        android:text="@string/tv_titulo"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="399dp"
        android:layout_height="250dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/spk"
        app:layout_constraintBottom_toTopOf="@+id/btn_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_matricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_matricula"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_matricula"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_matricula"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_edad"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_edad"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_edad"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_semestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_semestre"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_semestre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_semestre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_promedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_promedio"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_promedio"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_promedio"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_estado"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_estado"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/txt_estado"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColorHint="#757575" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="14dp"
        android:onClick="btn_agregar"
        android:text="@string/btn_agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_modificar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:onClick="btn_modificar"
        android:text="@string/btn_modificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_eliminar" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:onClick="btn_eliminar"
        android:text="@string/btn_eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>